# Unsupervised-Multimodal-Trajectory-Modeling

./: .gitignore  LICENSE.txt  README.md  codemeta.json  pyproject.toml
unsupervised_multimodal_trajectory_modeling/linear_gaussian/: __init__.py  marginalizable_mixture_model.py  marginalizable_state_space_model.py
unsupervised_multimodal_trajectory_modeling/nonlinear/: __init__.py  state_space_model.py  state_space_model_classifier.py  state_space_model_knn.py  state_space_model_linear_gaussian.py  state_space_model_linear_trans_knn_meas.py  state_space_model_mixture.py
unsupervised_multimodal_trajectory_modeling/util/: util_post_hoc.py  util_state_space.py
